3d midi, text positioning, fixed dark mode bug

--- a/current/src/styles/index.css
+++ b/current/src/styles/index.css
@@ -304,7 +304,7 @@ input:checked + .slideBtnTg:before {
 }
 
 section{
-  width:100vw;
+  max-width:100vw;
 }
 
 .parallax {
